--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
+    "razorpay": "^2.9.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-responsive-carousel": "^3.2.23",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
